# moveit_bridge

./: CMakeLists.txt  README.md  package.xml  setup.py
msg/: pose.msg
node/: moveit_bridge_node.py  moveit_demo.py
